--- a/M4/ABout US.html
+++ b/M4/ABout US.html
@@ -7,14 +7,14 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=diamond" />
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=accessibility" />
 </head>
    <body id="about_us">
        <section class="encabezado">
                 <section class="encabezad1">
-                    <span class="material-symbols-outlined"></span>
+                    <span class="material-symbols-outlined">accessibility</span>                    
                     <h1 class="oswald-uniquifier">About-Us</h1>
-                     <span class="material-symbols-outlined"></span>
+                    <span class="material-symbols-outlined">accessibility</span>
                 </section>
                 <section>
                     <nav>
