--- a/M4/ABout US.html
+++ b/M4/ABout US.html
@@ -24,6 +24,7 @@
                         <a href="historia.html">Historia</a>
                         <a href="Contacte.html">Contacte</a>
                         <a href="ABout US.html">About Us</a>
+                        <a href="instrucciòn.html">Instrucciones</a>
                     </nav>
                 </section>
         </section>
