--- a/M4/index.html
+++ b/M4/index.html
@@ -22,12 +22,13 @@
                         <a href="historia.html">Historia</a>
                         <a href="Contacte.html">Contacte</a>
                         <a href="ABout US.html">About Us</a>
+                        <a href="instrucciòn.html">Instrucciones</a>
                     </nav>
                 </section>
         </section>
          <main>
-    <!-- Aquí irá TODO el contenido de la página -->
-     <h1></h1>
+            <section></section>
+     
          </main>
 
         <footer class="footer">
