--- a/M4/instrucciòn.html
+++ b/M4/instrucciòn.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
    <head>
        <meta charset="UTF-8">
@@ -6,17 +7,14 @@
        <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=diamond" />
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=book_2" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
 </head>
-   <body id="historia">
+   <body id="instrucciones">
        <section class="encabezado">
                 <section class="encabezad1">
-                    <span class="material-symbols-outlined">book_2</span>
-                    <h1 class="oswald-uniquifier">Historia</h1>
-                    <span class="material-symbols-outlined">book_2</span>
+                    <span class="material-symbols-outlined"></span>
+                    <h1 class="oswald-uniquifier">Choose Your Story</h1>
+                     <span class="material-symbols-outlined"></span>
                 </section>
                 <section>
                     <nav>
@@ -29,7 +27,7 @@
                 </section>
         </section>
          <main>
-    <!-- Aquí irá TODO el contenido de la página -->
+            <section></section>
      
          </main>
 
