--- a/M4/instrucciòn.html
+++ b/M4/instrucciòn.html
@@ -8,13 +8,14 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=rule" />
 </head>
    <body id="instrucciones">
        <section class="encabezado">
                 <section class="encabezad1">
-                    <span class="material-symbols-outlined"></span>
-                    <h1 class="oswald-uniquifier">Choose Your Story</h1>
-                     <span class="material-symbols-outlined"></span>
+                    <span class="material-symbols-outlined">rule</span>
+                    <h1 class="oswald-uniquifier">Instrucciones</h1>
+                    <span class="material-symbols-outlined">rule</span>
                 </section>
                 <section>
                     <nav>
