Imagen de prueba + descriciòn

--- a/M4/index.html
+++ b/M4/index.html
@@ -27,8 +27,14 @@
                 </section>
         </section>
          <main>
-            <section>
-                
+            <section class="publicidad">
+                <img  class="imagen" src="Imagenes/prueba.jpeg" alt="">
+                <div class="texto-publicitario">
+                    <div class="cajas">Primer texto</div>
+                    <div class="cajas">Primer texto</div>
+                    <div class="cajas">Primer texto</div>
+                    <div class="cajas">Primer texto</div>
+                </div>
             </section>
      
          </main>
