--- a/M4/index.html
+++ b/M4/index.html
@@ -27,7 +27,7 @@
                 </section>
         </section>
          <main>
-            <section class="publicidad">
+            <section class="hero">
                 <img  class="imagen" src="Imagenes/prueba.jpeg" alt="">
                 <div class="texto-publicitario">
                     <div class="cajas">Primer texto</div>
