Animaciòn con scrool en el index

--- a/M4/index.html
+++ b/M4/index.html
@@ -35,6 +35,24 @@
                     <div class="cajas">Primer texto</div>
                     <div class="cajas">Primer texto</div>
                 </div>
+                <section class="hero1">
+                    <div class="caja2">Como se juega?:</div>
+                    <div class="card reveal">
+                        <p >El juego se juega tal</p>
+                        <p>Instruciones estas</p>
+                        <p>Y màs contenido</p>   
+                    </div>
+                    <ul>
+                        <li class="fila">Instrucciòn 1</li>
+                        <li class="fila">Instrucciòn 2</li>
+                        <li class="fila">Instrucciòn 3</li>
+                        <li class="fila">Instrucciòn 4</li>
+                        <li class="fila">Instrucciòn 5</li>
+                        <li class="fila">Instrucciòn 6</li>
+                        <li class="fila">Instrucciòn 7</li>
+                        <li class="fila">Instrucciòn 8</li>
+                    </ul>
+                </section>
             </section>
      
          </main>
