Animación SVG(completa)Index completado con todo lo que pide. Falta mejorar la decoración

--- a/M4/index.html
+++ b/M4/index.html
@@ -53,6 +53,13 @@
                         <li class="fila">Instrucciòn 8</li>
                     </ul>
                 </section>
+                <section class="vectorial">
+                    <h2>Ficha activa del jugador</h2>
+                    <svg class="ficha" viewBox="0 0 100 100">
+                        <circle cx="50" cy="50" r="35" />
+                        <circle cx="50" cy="50" r="15" class="centro" />
+                    </svg>
+                </section>
             </section>
      
          </main>
