--- a/M4/instrucciòn.html
+++ b/M4/instrucciòn.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
    <head>
        <meta charset="UTF-8">
-       <title>Principal</title>
+       <title>Proyexto MIX</title>
        <link rel="stylesheet" href="index.css">
        <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -95,8 +95,6 @@
                         </section>
                     </section>
             </div>
-            
-     
          </main>
 
         <footer class="footer">
