--- a/M4/historia.html
+++ b/M4/historia.html
@@ -29,7 +29,28 @@
                 </section>
         </section>
          <main>
-    <!-- Aquí irá TODO el contenido de la página -->
+            <section id="historia1">
+                <div class="historia-conten">
+                    <div class="tarjeta2">
+                        <div class="tarjeta-inner">
+                            <div class="tarjeta-descripcion tarjeta2-front">
+                                <img src="Imagenes/prueba.jpeg" alt="Personaje 1">
+                                <h3>Personaje 1</h3>
+                            </div>
+                            <!-- Cara trasera -->
+                            <div class="tarjeta-descripcion tarjeta2-back">
+                                <img src="Imagenes/Prueba2.jpg" alt="Personaje 1 dibujo">
+                            </div>
+                        </div>
+                    </div>        
+                    <div class="descripcion">
+                        <p>
+                            Aquí va la historia del personaje, su papel en los eventos
+                            importantes y cualquier detalle relevante.
+                        </p>
+                    </div>
+                </div>
+            </section>
      
          </main>
 
