--- a/M4/historia.html
+++ b/M4/historia.html
@@ -51,7 +51,81 @@
                     </div>
                 </div>
             </section>
-     
+            <section id="historia1">
+                <div class="historia-conten">
+                    <div class="tarjeta2">
+                        <div class="tarjeta-inner">
+                            <div class="tarjeta-descripcion tarjeta2-front">
+                                <img src="Imagenes/prueba.jpeg" alt="Personaje 1">
+                                <h3>Personaje 2</h3>
+                            </div>
+                            <!-- Cara trasera -->
+                            <div class="tarjeta-descripcion tarjeta2-back">
+                                <img src="Imagenes/Prueba2.jpg" alt="Personaje 1 dibujo">
+                            </div>
+                        </div>
+                    </div>        
+                    <div class="descripcion">
+                        <p>
+                            Aquí va la historia del personaje, su papel en los eventos
+                            importantes y cualquier detalle relevante.
+                        </p>
+                    </div>
+                </div>
+            </section>
+            <section id="historia1">
+                <div class="historia-conten">
+                    <div class="tarjeta2">
+                        <div class="tarjeta-inner">
+                            <div class="tarjeta-descripcion tarjeta2-front">
+                                <img src="Imagenes/prueba.jpeg" alt="Personaje 1">
+                                <h3>Personaje 1</h3>
+                            </div>
+                            <!-- Cara trasera -->
+                            <div class="tarjeta-descripcion tarjeta2-back">
+                                <img src="Imagenes/Prueba2.jpg" alt="Personaje 1 dibujo">
+                            </div>
+                        </div>
+                    </div>        
+                    <div class="descripcion">
+                        <p>
+                            Aquí va la historia del personaje, su papel en los eventos
+                            importantes y cualquier detalle relevante.
+                        </p>
+                    </div>
+                </div>
+            </section>
+            <div class="instrucciones">
+                <h1>Seccions descriptives amb la història del joc
+                     i dibuixos/fotos
+                </h1>
+                    <section class="contenedor-mecanica">
+                        <section class="tarjeta1">
+                            <img src="Imagenes/prueba.jpeg" alt="">
+                            <h1>Mecanica</h1>
+                        </section>
+                        <section class="tarjeta1">
+                            <img src="Imagenes/prueba.jpeg" alt="">
+                            <h1>Mecanica</h1>
+                        </section>
+                        <section class="tarjeta1">
+                            <img src="Imagenes/prueba.jpeg" alt="">
+                            <h1>Mecanica</h1>
+                        </section>
+                        <section class="tarjeta1">
+                            <img src="Imagenes/prueba.jpeg" alt="">
+                            <h1>Mecanica</h1>
+                        </section>
+                        <section class="tarjeta1">
+                            <img src="Imagenes/prueba.jpeg" alt="">
+                            <h1>Mecanica</h1>
+                        </section>
+                        <section class="tarjeta1">
+                            <img src="Imagenes/prueba.jpeg" alt="">
+                            <h1>Mecanica</h1>
+                        </section>
+                    </section>
+            </div>
          </main>
 
         <footer class="footer">
