Primer Personaje incluido en la historia

--- a/M4/historia.html
+++ b/M4/historia.html
@@ -34,19 +34,20 @@
                     <div class="tarjeta2">
                         <div class="tarjeta-inner">
                             <div class="tarjeta-descripcion tarjeta2-front">
-                                <img src="Imagenes/prueba.jpeg" alt="Personaje 1">
+                                <img src="Imagenes/Pana Miguen en el juego.png" alt="Personaje 1">
                                 <h3>Personaje 1</h3>
                             </div>
                             <!-- Cara trasera -->
                             <div class="tarjeta-descripcion tarjeta2-back">
-                                <img src="Imagenes/Prueba2.jpg" alt="Personaje 1 dibujo">
+                                <img src="Imagenes/El Legendario Pana Miguel.png" alt="Personaje 1 dibujo">
                             </div>
                         </div>
                     </div>        
                     <div class="descripcion">
                         <p>
-                            Aquí va la historia del personaje, su papel en los eventos
-                            importantes y cualquier detalle relevante.
+                            En los antiguos reinos de Bigotaria, se decía que cuando el mundo estuviera al borde del Game Over, surgiría un héroe improbable:
+                            un pequeño gato capaz de caminar erguido como los antiguos.
+                            Sir Mírrin nació como un simple gatito de taberna, durmiendo sobre sacos de grano y robando pescado. Pero una noche, al tocar por accidente el Laúd Ígneo de los Pixeles Eternos, despertó su conciencia heroica. Desde entonces, nunca volvió a caminar en cuatro patas.
                         </p>
                     </div>
                 </div>
