--- a/M4/historia.html
+++ b/M4/historia.html
@@ -57,12 +57,12 @@
                     <div class="tarjeta2">
                         <div class="tarjeta-inner">
                             <div class="tarjeta-descripcion tarjeta2-front">
-                                <img src="Imagenes/prueba.jpeg" alt="Personaje 1">
+                                <img src="Imagenes/Princesa Miguel-juego.png" alt="Personaje 1">
                                 <h3>Personaje 2</h3>
                             </div>
                             <!-- Cara trasera -->
                             <div class="tarjeta-descripcion tarjeta2-back">
-                                <img src="Imagenes/Prueba2.jpg" alt="Personaje 1 dibujo">
+                                <img src="Imagenes/Princesa Real.png" alt="Personaje 1 dibujo">
                             </div>
                         </div>
                     </div>        
