Historia de los personajes

--- a/M4/historia.html
+++ b/M4/historia.html
@@ -68,8 +68,13 @@
                     </div>        
                     <div class="descripcion">
                         <p>
-                            Aquí va la historia del personaje, su papel en los eventos
-                            importantes y cualquier detalle relevante.
+                            Minina nació en el castillo de Pixelia Alta, hija de la 
+                            antigua dinastía felina. A diferencia de 
+                            otros gatos, nunca jugó ni corrió.
+                             Prefería quedarse de pie, observando 
+                             el mundo con una calma inquietante, 
+                             como si entendiera las reglas invisibles 
+                             del juego.
                         </p>
                     </div>
                 </div>
