--- a/M4/historia.html
+++ b/M4/historia.html
@@ -107,30 +107,61 @@
                 </h1>
                     <section class="contenedor-mecanica">
                         <section class="tarjeta1">
-                            <img src="Imagenes/prueba.jpeg" alt="">
+                            <img src="Imagenes/Captura de pantalla de 2026-01-19 18-59-15.png" alt="">
                             <h1>Mecanica</h1>
                         </section>
                         <section class="tarjeta1">
-                            <img src="Imagenes/prueba.jpeg" alt="">
+                            <img src="Imagenes/Captura de pantalla de 2026-01-19 19-00-01.png" alt="">
                             <h1>Mecanica</h1>
                         </section>
                         <section class="tarjeta1">
-                            <img src="Imagenes/prueba.jpeg" alt="">
+                            <img src="Imagenes/Captura de pantalla de 2026-01-19 19-00-11.png" alt="">
                             <h1>Mecanica</h1>
                         </section>
                         <section class="tarjeta1">
-                            <img src="Imagenes/prueba.jpeg" alt="">
+                            <img src="Imagenes/Captura de pantalla de 2026-01-19 19-00-19.png" alt="">
                             <h1>Mecanica</h1>
                         </section>
                         <section class="tarjeta1">
-                            <img src="Imagenes/prueba.jpeg" alt="">
+                            <img src="Imagenes/Captura de pantalla de 2026-01-19 19-00-30.png" alt="">
                             <h1>Mecanica</h1>
                         </section>
                         <section class="tarjeta1">
-                            <img src="Imagenes/prueba.jpeg" alt="">
+                            <img src="Imagenes/Captura de pantalla de 2026-01-19 19-00-39.png" alt="">
                             <h1>Mecanica</h1>
                         </section>
                     </section>
+                   
+
+                <h1>Seccions descriptives amb la història del joc
+                     i dibuixos/fotos/Juego2
+                </h1>
+                    <section class="contenedor-mecanica">
+                        <section class="tarjeta1">
+                            <img src="Imagenes/" alt="">
+                            <h1>Mecanica</h1>
+                        </section>
+                        <section class="tarjeta1">
+                            <img src="Imagenes/" alt="">
+                            <h1>Mecanica</h1>
+                        </section>
+                        <section class="tarjeta1">
+                            <img src="Imagenes/" alt="">
+                            <h1>Mecanica</h1>
+                        </section>
+                        <section class="tarjeta1">
+                            <img src="Imagenes/" alt="">
+                            <h1>Mecanica</h1>
+                        </section>
+                        <section class="tarjeta1">
+                            <img src="Imagenes/" alt="">
+                            <h1>Mecanica</h1>
+                        </section>
+                        <section class="tarjeta1">
+                            <img src="Imagenes/" alt="">
+                            <h1>Mecanica</h1>
+                        </section>
+                    </section>    
             </div>
          </main>
 
