--- a/M4/instrucciòn.html
+++ b/M4/instrucciòn.html
@@ -30,41 +30,30 @@
          <main>
             <section class="caja-ins">
                 <div class="tarjeta">
-                    <img src="Imagenes/prueba.jpeg" alt="">
-                    <h1>Instrucciones Texto</h1>
+                    <img src="Imagenes/Imagen 2/Captura de pantalla de 2026-01-20 15-45-02.png" alt="">
+                    <h1>Haz clic para decidir</h1>
                 </div>
                 <div class="tarjeta">
-                    <img src="Imagenes/prueba.jpeg" alt="">
-                    <h1>Instrucciones Texto</h1>
+                    <img src="Imagenes/Imagen 2/Captura de pantalla de 2026-01-20 15-45-14.png" alt="">
+                    <h1>Le los textos de Diàlogo</h1>
                 </div>
                 <div class="tarjeta">
-                    <img src="Imagenes/prueba.jpeg" alt="">
-                    <h1>Instrucciones Texto</h1>
+                    <img src="Imagenes/Imagen 2/Captura de pantalla de 2026-01-20 15-45-26.png" alt="">
+                    <h1>Avanza o huye del peligro</h1>
                 </div>
                 <div class="tarjeta">
-                    <img src="Imagenes/prueba.jpeg" alt="">
-                    <h1>Instrucciones Texto</h1>
+                    <img src="Imagenes/Imagen 2/Captura de pantalla de 2026-01-20 15-45-33.png" alt="">
+                    <h1>Guarda y continua cuando quieras</h1>
                 </div>
                 <div class="tarjeta">
-                    <img src="Imagenes/prueba.jpeg" alt="">
-                    <h1>Instrucciones Texto</h1>
+                    <img src="Imagenes/Imagen 2/Captura de pantalla de 2026-01-20 15-45-41.png" alt="">
+                    <h1>Las desiciones cambian la historia</h1>
                 </div>
                 <div class="tarjeta">
-                    <img src="Imagenes/prueba.jpeg" alt="">
-                    <h1>Instrucciones Texto</h1>
+                    <img src="Imagenes/Imagen 2/Captura de pantalla de 2026-01-20 15-45-50.png" alt="">
+                    <h1>Descubre multiples finales</h1>
                 </div>
-                <div class="tarjeta">
-                    <img src="Imagenes/prueba.jpeg" alt="">
-                    <h1>Instrucciones Texto</h1>
-                </div>
-                <div class="tarjeta">
-                    <img src="Imagenes/prueba.jpeg" alt="">
-                    <h1>Instrucciones Texto</h1>
-                </div>
-                <div class="tarjeta">
-                    <img src="Imagenes/prueba.jpeg" alt="">
-                    <h1>Instrucciones Texto</h1>
-                </div>
+                
             </section>
             <div class="instrucciones">
                 <h1>Mecanicas del juego</h1>
