Correcciòn de las dos historias

--- a/M4/historia.html
+++ b/M4/historia.html
@@ -84,19 +84,20 @@
                     <div class="tarjeta2">
                         <div class="tarjeta-inner">
                             <div class="tarjeta-descripcion tarjeta2-front">
-                                <img src="Imagenes/prueba.jpeg" alt="Personaje 1">
+                                <img src="Imagenes/PJ1.webp" alt="Personaje 1">
                                 <h3>Personaje 1</h3>
                             </div>
                             <!-- Cara trasera -->
                             <div class="tarjeta-descripcion tarjeta2-back">
-                                <img src="Imagenes/Prueba2.jpg" alt="Personaje 1 dibujo">
+                                <img src="Imagenes/PJ1.webp" alt="Personaje 1 dibujo">
                             </div>
                         </div>
                     </div>        
                     <div class="descripcion">
                         <p>
-                            Aquí va la historia del personaje, su papel en los eventos
-                            importantes y cualquier detalle relevante.
+                            Vandal vive en una pesadilla digital: está atrapado en el sótano de dos streamers que lo mantienen bajo un régimen de servidumbre moderna. Su vida se reduce a una pantalla, obligado a moderar chats y editar clips sin descanso para alimentar los algoritmos de  Sora y yuna, sus dueñas.
+
+Mientras ellas brillan bajo los focos de la planta de arriba, él sobrevive entre cables y discos duros, siendo el motor invisible y cautivo de su éxito.
                         </p>
                     </div>
                 </div>
@@ -138,29 +139,10 @@
                 </h1>
                     <section class="contenedor-mecanica">
                         <section class="tarjeta1">
-                            <img src="Imagenes/" alt="">
-                            <h1>Mecanica</h1>
+                            <img src="Imagenes/escenario.webp" alt="">
+                            <h1>Fondo de los hechos</h1>
                         </section>
-                        <section class="tarjeta1">
-                            <img src="Imagenes/" alt="">
-                            <h1>Mecanica</h1>
-                        </section>
-                        <section class="tarjeta1">
-                            <img src="Imagenes/" alt="">
-                            <h1>Mecanica</h1>
-                        </section>
-                        <section class="tarjeta1">
-                            <img src="Imagenes/" alt="">
-                            <h1>Mecanica</h1>
-                        </section>
-                        <section class="tarjeta1">
-                            <img src="Imagenes/" alt="">
-                            <h1>Mecanica</h1>
-                        </section>
-                        <section class="tarjeta1">
-                            <img src="Imagenes/" alt="">
-                            <h1>Mecanica</h1>
-                        </section>
+                        
                     </section>    
             </div>
          </main>
